--- a/components/community/UpcomingEvents/UpcomingEvents.module.css
+++ b/components/community/UpcomingEvents/UpcomingEvents.module.css
@@ -100,4 +100,9 @@
         width: 100%;
         height: 176px;
     }
+
+        .noEventsAdminText {
+            max-width: 255px;
+            font-size: var(--font-size-md);
+        }
 }
